# zero2prod

./: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.test  README.md  dotenv.example  rest.http  spec.yaml  sqlx-data.json
.github/workflows/: general.yml
configuration/: base.yaml  production.yaml
migrations/: 20230426160825_create_subscriptions_table.sql  20230429082322_add_status_to_subscriptions.sql  20230429113941_make_status_not_null_in_subscriptions.sql  20230429114146_create_subscriptions_token_table.sql
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  newsletters.rs  subscribe.rs  subscription.rs  subscriptions_confirm.rs
src/tests/: health_check.rs  mod.rs  setup.rs  subscribe.rs
tests/api/: health_check.rs  helper.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
