[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
config = "0.13.3"
eyre = "0.6.8"
http = "0.2.9"
serde = { version = "1.0.160", features = ["derive"] }
sqlx = { version = "0.6.3", default-features = false, features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "offline",
] }
tokio = { version = "1.28.0", features = ["full"] }
tracing = { version = "0.1.38", features = ["log"] }
tracing-subscriber = { version = "0.3.17", features = [
  "env-filter",
  "registry",
  "json",
] }
uuid = { version = "1.3.1", features = ["v4"] }

[dev-dependencies]
reqwest = { version = "0.11.16", default-features = false, features = [
  "rustls-tls",
] }
