[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
config = "0.13.3"
eyre = "0.6.8"
http = "0.2.9"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.160", features = ["derive"] }
sqlx = { version = "0.6.3", default-features = false, features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "offline",
] }
tokio = { version = "1.28.0", features = ["full"] }
tracing = { version = "0.1.38", features = ["log"] }
tracing-actix-web = "0.7.4"
# tracing-bunyan-formatter = "0.3.7"
tracing-subscriber = { version = "0.3.17", features = [
  "env-filter",
  "registry",
  "json",
] }
uuid = { version = "1.3.1", features = ["v4"] }

[dev-dependencies]
once_cell = "1.17.1"
reqwest = { version = "0.11.16", default-features = false, features = [
  "rustls-tls",
] }
