[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
claims = "0.7.1"
config = "0.13.3"
eyre = "0.6.8"
fake = "2.5.0"
http = "0.2.9"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.160", features = ["derive"] }
serde-aux = "4.2.0"
sqlx = { version = "0.6.3", default-features = false, features = [
  "runtime-actix-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
  "offline",
] }
tokio = { version = "1.28.0", features = ["full"] }
tracing = { version = "0.1.38", features = ["log"] }
tracing-actix-web = "0.7.4"
tracing-subscriber = { version = "0.3.17", features = [
  "env-filter",
  "registry",
  "json",
] }
unicode-segmentation = "1.10.1"
uuid = { version = "1.3.1", features = ["v4"] }
validator = "0.16.0"
reqwest = { version = "0.11.16", default-features = false, features = [
  "rustls-tls",
  "json",
] }
serde_json = "1.0.96"

[dev-dependencies]
once_cell = "1.17.1"
wiremock = "0.5.18"
